--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,11 @@ foreach(ONE_BENCH_CPP ${ALL_BENCH_CPP})
     )
 
 endforeach()
+
+option(ENABLE_TESTING "Enable Test Builds" ON)
+
+if(ENABLE_TESTING)
+    enable_testing()
+    message("Building Tests. Be sure to check out test/constexpr_tests for constexpr testing")
+    add_subdirectory(test)
+endif()
